--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_REACT_APP_BACKEND_URL=https://api.avtoservis.fassco.uz
+VITE_REACT_APP_BACKEND_URL=https://autoservicefassco.pythonanywhere.com
